tests/custom_discriminant/fail/lifetime_in_discriminant_type.stderr
error[E0515]: cannot return reference to function parameter `value`
 --> tests/custom_discriminant/fail/lifetime_in_discriminant_type.rs:3:1
  |
3 | #[custom_discriminant(W<'_>)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ returns a reference to data owned by the current function
  |
  = note: this error originates in the attribute macro `custom_discriminant` (in Nightly builds, run with -Z macro-backtrace for more info)
